--- a/product.html
+++ b/product.html
@@ -49,14 +49,19 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 15px;
+      gap: 18px;
       margin-bottom: 20px;
     }
 
+    /* Updated circular logo styling */
     .header img {
-      width: 50px;
-      height: 50px;
+      width: 70px;
+      height: 70px;
+      object-fit: cover;
       border-radius: 50%;
+      display: block;
+      border: 2px solid #e6ded6;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
     }
 
     h1 {
@@ -155,6 +160,10 @@
       iframe.substack-embed {
         height: 280px;
       }
+      .header img {
+        width: 60px;
+        height: 60px;
+      }
     }
   </style>
 </head>
@@ -173,7 +182,7 @@
       <a href="product.html" class="active">Free Templates</a>
     </div>
 
-    <!-- NEW: Clarity Reset Freebie -->
+    <!-- Clarity Reset Freebie -->
     <div class="kit-embed">
       <iframe 
         src="https://fleura-co.kit.com/b0718b4bd7" 
@@ -211,6 +220,7 @@
   </div>
 </body>
 </html>
+
 
 
 
