--- a/product.html
+++ b/product.html
@@ -171,7 +171,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="Black Circle Modern Nails Studio Logo.png" alt="Fleura Co Logo" />
+      <img src="5.png" alt="Fleura Co Logo" />
       <h1>Fleura Co</h1>
     </div>
 
